Logging adjustments, changed timeout default, and adjusted where a few settings are set

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-export-node-nr-synthetics",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "New Relic Synthetics language export for Selenium IDE",
   "repository": "https://github.com/tanben/code-export-node-nr-synthetics",
   "keywords": [
@@ -12,7 +12,8 @@
   "private": true,
   "scripts": {
     "build": "babel -d dist src --ignore=__test__",
-    "watch": "yarn build -w"
+    "watch": "yarn build -w",
+    "test": "jest"
   },
   "main": "dist/index.js",
   "files": [
@@ -21,7 +22,8 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.5"
+    "@babel/preset-env": "^7.4.5",
+    "jest": "^24.3.1"
   },
   "dependencies": {
     "@babel/core": "^7.3.4",
